--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -57,7 +57,7 @@
             <ul class="navbar-nav ml-auto">
                 
                 <li class="nav-item">                
-                <a class="nav-link" href="{{ site.baseurl }}/index.html">Home</a>
+                <a class="nav-link" href="{{ site.baseurl }}/index.html">Inicio</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -69,20 +69,19 @@
                 </li>
                 
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/about">About</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/about">¿Por qué?</a>
                 </li> 
-                
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/contact">Contact</a>
-                </li> 
-                
-                 <li class="nav-item">                
-                    <a target="_blank" class="nav-link" href="https://github.com/wowthemesnet/affiliates-jekyll-theme">Github</a>
-                </li> 
-                
-                
+                    <a class="nav-link" href="{{ site.baseurl }}/contact">Recursos</a>
+                </li>      
                 <li class="nav-item">                
-                    <a class="nav-link highlight" href="https://github.com/wowthemesnet/affiliates-jekyll-theme/archive/master.zip">Download Theme</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/about">Talleres</a>
+                </li>                            
+                <li class="nav-item">                
+                    <a class="nav-link" href="{{ site.baseurl }}/about">Voces</a>
+                </li>                 
+                <li class="nav-item">                
+                    <a class="nav-link" href="{{ site.baseurl }}/contact">Contáctanos</a>
                 </li> 
                 
             </ul>
@@ -122,7 +121,7 @@
 
 
 
-    <!-- Before Footer
+    <!-- Before Footer look in .beforefooter in theme.css
     ================================================== --> 
     <div class="beforefooter">
         <div class="container">
