colors and  text

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -127,12 +127,12 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>This is your final call to action area. Shine like a star, make them want you, tell 'em to push that button!</h3>
-                    <p>We offer a <span>30 Day Money Back Guarantee</span>, so joining is <span class="risk-free">Risk-Free!</span></p>
-                    <a class="btn btn-primary btn-lg" href="#">Join us yesterday</a>
+                    <h3>No dudes en contactarnos, la comunidad esta abierta para todos los estudiantes y egresados recientes de economía en toda Latinoamérica.</h3>
+                    <p>Aprovecha <span>esta oportunidad de desarrollo</span>, y forma parte de una academia <span class="risk-free"> más diversa !</span></p>
+                    <a class="btn btn-primary btn-lg" href="#">Regresar al Inicio</a>
                 </div>
                 <div class="col-md-4 text-right footersocial">
-                    <h5>Connect with Us</h5>
+                    <h5>Encuéntranos en nuestras redes</h5>
                     <i class="fa fa-facebook"></i>
                     <i class="fa fa-twitter"></i>
                         <i class="fa fa-google"></i>
