--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -386,7 +386,7 @@ span.post-name a,span.post-read-more a:hover {
     margin-top: 10px;
 }
 .beforefooter {
-    background: #472dcc;
+    background: #b2a7c7;
     color: #111;
     padding: 50px 0;
     max-width: 100%;
