updating subpages content
sdadsadsa

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,16 +69,16 @@
                 </li>
                 
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/about">¿Por qué?</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/problem">¿Por qué?</a>
                 </li> 
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/contact">Recursos</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
                 </li>      
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/about">Talleres</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/talleres1">Talleres</a>
                 </li>                            
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/about">Voces</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/voces">Voces</a>
                 </li>                 
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/contact">Contáctanos</a>
@@ -127,7 +127,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>No dudes en contactarnos, la comunidad esta abierta para todos los estudiantes y egresados recientes de economía en toda Latinoamérica.</h3>
+                    <h3>No dudes en contactarnos, la comunidad está abierta para todos los estudiantes y egresados recientes de economía en toda Latinoamérica.</h3>
                     <p>Aprovecha <span>esta oportunidad de desarrollo</span>, y forma parte de una academia <span class="risk-free"> más diversa !</span></p>
                     <a class="btn btn-primary btn-lg" href="#">Regresar al Inicio</a>
                 </div>
