--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,24 +1,22 @@
 <div class="sidebar">
         
         <div class="sidebar-section">
-            <h5><span>Newsletter</span></h5>
+            <h5><span>Boletin informativo</span></h5>
             {% include newsletter.html %}
         </div>
             
         <div class="sidebar-section">
-            <h5><span>Useful</span></h5>
+            <h5><span>Links Útiles</span></h5>
             <ul style="list-none;">
-            <li><a target="_blank" href="https://m.do.co/c/84c9b45d0c47">Digital Ocean</a></li>
-            <li><a target="blank" href="https://www.cloudways.com/en/pricing.php?id=153986&a_bid=005da123">Cloudways</a></li>
-            <li><a target="blank" href="http://shareasale.com/r.cfm?b=875645&u=1087935&m=41388&urllink=&afftrack=">Page Speed Test</a></li>
-            <li><a target="blank" href="https://www.wowthemes.net/affiliate-area/?utm_source=fromjekyllsidebar&utm_campaign=sidebar">Partner with Us</a></li>
-            <li><a target="blank" href="https://www.wowthemes.net/category/jekyll-themes/">Our Jekyll Themes</a></li>
+            <li><a target="_blank" href="https://raguide.github.io">Econ RA Guide</a></li>
+            <li><a target="blank" href="https://predoc.org/opportunities">PREDOC org</a></li>
+            <li><a target="blank" href="https://peacehdforphd.com/en/the-phd-experience/phd-support-groups/">PeacehD</a></li>
             </ul>
         </div>
             
         <div class="sidebar-section">
-             <h5><span>Recommended</span></h5>
-           <a href="https://easydigitaldownloads.com/?ref=2135" title="Sell digital downloads with WordPress, for free"><img src="https://easydigitaldownloads.com/wp-content/uploads/2015/02/300x250-2.png" alt="Sell digital downloads with WordPress, for free" /></a>
+             <h5><span>Recomendaciones</span></h5>
+           <a href="https://easydigitaldownloads.com/?ref=2135" title="Visita la página de nuevos talleres"><img src="https://easydigitaldownloads.com/wp-content/uploads/2015/02/300x250-2.png" alt="Sell digital downloads with WordPress, for free" /></a>
         </div>
             
 </div>
