change some titles

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -16,7 +16,7 @@
             
         <div class="sidebar-section">
              <h5><span>Recomendaciones</span></h5>
-           <a href="https://easydigitaldownloads.com/?ref=2135" title="Visita la página de nuevos talleres"><img src="https://easydigitaldownloads.com/wp-content/uploads/2015/02/300x250-2.png" alt="Sell digital downloads with WordPress, for free" /></a>
+           <a href="https://econthaki.github.io/talleres1" title="Visita la página de nuevos talleres"><img src="{{ site.baseurl }}/assets/images/logo.png" alt="Visita la página de nuevos talleres" /></a>
         </div>
             
 </div>
