--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,10 +61,10 @@
                 </li>
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Post</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">¿Por qué?</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/is-intelligence-enough.html">Left Sidebar</a>
-                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/red-riding.html">Right Sidebar</a>
+                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2021/01/05/2021-01-05-problema-identificado.html">Problema</a>
+                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/red-riding.html">Encuestas</a>
                     </div>
                 </li>
                 
