--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,17 +60,19 @@
                 <a class="nav-link" href="{{ site.baseurl }}/index.html">Inicio</a>
                 </li>
 
+                <li class="nav-item">                
+                    <a class="nav-link" href="{{ site.baseurl }}/acercade">Acerca de</a>
+                </li> 
+
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">¿Por qué?</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2021/01/05/problema-identificado.html">Problema</a>
-                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2018/01/12/red-riding.html">Encuestas</a>
+                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2021/01/05/encuestas.html">Encuestas</a>
                     </div>
                 </li>
                 
-                <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/problem">¿Por qué?</a>
-                </li> 
+
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
                 </li>      
