--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,20 +68,18 @@
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">¿Por qué?</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
                     <a class="dropdown-item" href="{{ site.baseurl }}/problematica/academia/2021/01/05/problema-identificado.html">Problema</a>
-                    <a class="dropdown-item" href="{{ site.baseurl }}/jekyll/tutorial/2021/01/05/encuestas.html">Encuestas</a>
+                    <a class="dropdown-item" href="{{ site.baseurl }}/encuestas/datos/2021/01/05/encuestas.html">Encuestas</a>
                     </div>
                 </li>
-                
-
+                <li class="nav-item">                
+                    <a class="nav-link" href="{{ site.baseurl }}/programas">Programas</a>
+                </li>                  
+                <li class="nav-item">                
+                    <a class="nav-link" href="{{ site.baseurl }}/voces">Voces</a>
+                </li>   
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
                 </li>      
-                <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/talleres1">Talleres</a>
-                </li>                            
-                <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/voces">Voces</a>
-                </li>                 
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/contact">Contáctanos</a>
                 </li> 
