--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,13 +72,13 @@
                     </div>
                 </li>
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/programas">Programas</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/programas/2021/01/05/programas.html">Programas</a>
                 </li>                  
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/voces">Voces</a>
                 </li>   
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
+                    <a target="_blank" class="nav-link" href="https://econthaki.github.io/recursos1">Recursos</a>
                 </li>      
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/contact">Contáctanos</a>
