--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -78,7 +78,7 @@
                     <a class="nav-link" href="{{ site.baseurl }}/voces/2021/01/05/voces.html">Voces</a>
                 </li>   
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/recursos1/2021/01/05/recursos.html">Recursos</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
                 </li>      
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/contact">Contáctanos</a>
