--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
                 </li>
 
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">Acerca de</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/acercade">Acerca de</a>
                 </li> 
 
                 <li class="nav-item dropdown">
@@ -81,7 +81,7 @@
                     <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
                 </li>      
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/contact">Contáctanos</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/contact.html">Contáctanos</a>
                 </li> 
                 
             </ul>
