--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -72,10 +72,10 @@
                     </div>
                 </li>
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/programas/2021/01/05/programas.html">Programas</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/programas">Programas</a>
                 </li>                  
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/voces/2021/01/05/voces.html">Voces</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/voces">Voces</a>
                 </li>   
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
