--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,7 +61,7 @@
                 </li>
 
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/acercade">Acerca de</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">Acerca de</a>
                 </li> 
 
                 <li class="nav-item dropdown">
@@ -75,10 +75,10 @@
                     <a class="nav-link" href="{{ site.baseurl }}/programas">Programas</a>
                 </li>                  
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/voces">Voces</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/voces/2021/01/05/voces.html">Voces</a>
                 </li>   
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/recursos1">Recursos</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/recursos/2021/01/05/recursos.html">Recursos</a>
                 </li>      
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/contact.html">Contáctanos</a>
