--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -61,18 +61,18 @@
                 </li>
 
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">Acerca de</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">¿Quiénes Somos?</a>
                 </li> 
 
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">¿Por qué?</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{{ site.baseurl }}/problematica/academia/2021/01/05/problema-identificado.html">Problema</a>
+                    <a class="dropdown-item" href="{{ site.baseurl }}/problematica/academia/2021/01/05/problema-identificado.html">Problema Identificado</a>
                     <a class="dropdown-item" href="{{ site.baseurl }}/encuestas/datos/2021/01/05/encuestas.html">Encuestas</a>
                     </div>
                 </li>
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/programas">Programas</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/programas/2021/01/05/programas.html">Programas</a>
                 </li>                  
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/voces/2021/01/05/voces.html">Voces</a>
@@ -81,7 +81,7 @@
                     <a class="nav-link" href="{{ site.baseurl }}/recursos/2021/01/05/recursos.html">Recursos</a>
                 </li>      
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/contact.html">Contáctanos</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/contact.html">Preguntas y Contacto</a>
                 </li> 
                 
             </ul>
@@ -152,7 +152,7 @@
                 <div class="col-sm-3">
                 <div class="footer-widget">
                 <a href="{{site.baseurl}}/contact">
-                <img src="{{ site.baseurl }}/assets/images/logo-footer.png">
+                <img src="{{ site.baseurl }}/assets/images/logo.jpg">
                 </a>
                 </div>
                 </div>
