--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -152,7 +152,7 @@
                 <div class="col-sm-3">
                 <div class="footer-widget">
                 <a href="{{site.baseurl}}/contact">
-                <img src="{{ site.baseurl }}/assets/images/logo.jpg">
+                <img src="{{ site.baseurl }}/assets/images/logo_sinfondo.png">
                 </a>
                 </div>
                 </div>
