--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -12,7 +12,7 @@
             
         <div class="sidebar-section">
              <h5><span>Recomendaciones</span></h5>
-           <a href="https://econthaki.github.io/talleres1" title="Visita la página de nuevos talleres"><img src="{{ site.baseurl }}/assets/images/logo_sinfondo.png" alt="Visita la página de nuevos talleres" /></a>
+           <a href="https://econthaki.github.io/programas/2021/01/05/programas.html" title="Visita la página de nuestros programas"><img src="{{ site.baseurl }}/assets/images/logo_dark.jpg" alt="Visita la página de nuestros porgramas" /></a>
         </div>
             
 </div>
