some changes about initial page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-<link rel="icon" href="{{ site.baseurl }}/assets/images/favicon.png">    
+<link rel="icon" href="{{ site.baseurl }}/assets/images/logo.jpg">    
 <title>{{ page.title }} | {{site.name}}</title>
 {% seo %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
@@ -46,7 +46,7 @@
 
         <!-- Begin Logo -->
         <a class="navbar-brand" href="{{ site.baseurl }}/">
-        <img src="{{ site.baseurl }}/{{ site.logo_sinfondo }}" alt="{{ site.name }}">
+        <img src="{{ site.baseurl }}/{{ site.logo }}" alt="{{ site.name }}">
         </a>
         <!-- End Logo -->
 
@@ -81,7 +81,7 @@
                     <a class="nav-link" href="{{ site.baseurl }}/recursos/2021/01/05/recursos.html">Recursos</a>
                 </li>      
                 <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/contact.html">Preguntas y Contacto</a>
+                    <a class="nav-link" href="{{ site.baseurl }}/contact.html"> Contacto</a>
                 </li> 
                 
             </ul>
@@ -127,8 +127,8 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>No dudes en contactarnos, la comunidad está abierta para todos los estudiantes y egresados recientes de economía en toda Latinoamérica.</h3>
-                    <p>Aprovecha <span>esta oportunidad de desarrollo</span>, y forma parte de una academia <span class="risk-free"> más diversa !</span></p>
+                    <h3>Estamos en proceso de diseño de los programas para incrementar la diversidad en la academia en economía en Latinoamérica y Caribe.</h3>
+                    <p>Si tienes ideas que quieras compartir sobre esto, no dudes en contactarte con nosotr@s. Pronto tendremos más novedades</p>
                     <a class="btn btn-primary btn-lg" href="#">Regresar al Inicio</a>
                 </div>
                 <div class="col-md-4 text-right footersocial">
@@ -152,7 +152,7 @@
                 <div class="col-sm-3">
                 <div class="footer-widget">
                 <a href="{{site.baseurl}}/contact">
-                <img src="{{ site.baseurl }}/assets/images/logo_sinfondo.png">
+                <img src="{{ site.baseurl }}/assets/images/logo_dark.jpg">
                 </a>
                 </div>
                 </div>
@@ -162,11 +162,10 @@
                 <div class="footer-widget">
                 <h5 class="title">Nosotros</h5>
                 <ul>
-                <li><a href="https://www.wowthemes.net/premium-themes-templates/">Sobre Nosotros</a></li>
-                <li><a target="_blank" href="https://www.wowthemes.net/affiliate-area/">Aliados</a></li>
-                <li><a href="https://www.wowthemes.net/terms-and-conditions/">Talleres</a></li>
-                <li><a href="https://www.wowthemes.net/blog/">Recursos</a></li>
-                <li><a href="https://www.wowthemes.net/support/">Contact</a></li>
+                <li><a href="https://econthaki.github.io/acercade/2021/01/05/acercade.html">Sobre Nosotros</a></li>
+                <li><a target="_blank" href="https://econthaki.github.io/programas/2021/01/05/programas.html">Programas</a></li>
+                <li><a href="https://www.wowthemes.net/terms-and-conditions/">Preguntas Frecuentes</a></li>
+                <li><a href="https://econthaki.github.io/contact.html">Contacto</a></li>
                 </ul>
                 </div>
                 </div>
@@ -174,7 +173,9 @@
                 <div class="col-sm-3">
                 <div class="footer-widget textwidget">
                     <h5 class="title">Recuerda</h5>
-                    <p>Nosotros somos una comunidad que promueve la equidad y diversidad en la academia a través de mentorias a jovenes economistas. 
+                    <p>Agradecimientos: </p>
+                    <p>Ilustraciones personales: Nataile Menacho (IG: natie.moon) </p>
+                    <p>Diseño y elaboración del logo: Kevin Contreras (link a https://kazeamoretti.myportfolio.com/)</p>
                 </div>
                 </div>
             </div>
