--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,9 +4,8 @@
         <div class="sidebar-section">
             <h5><span>Links Útiles</span></h5>
             <ul style="list-none;">
-            <li><a target="_blank" href="https://raguide.github.io">Econ RA Guide</a></li>
-            <li><a target="blank" href="https://predoc.org/opportunities">PREDOC org</a></li>
-            <li><a target="blank" href="https://peacehdforphd.com/en/the-phd-experience/phd-support-groups/">PeacehD</a></li>
+            <li><a target="_blank" href="https://econthaki.github.io/recursos/2021/01/06/pregfreq.html">Preguntas Frecuentes</a></li>
+            <li><a target="blank" href="https://econthaki.github.io/contact.html">Contacto</a></li>
             </ul>
         </div>
             
