--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -533,7 +533,7 @@ ul.tags li {
 	font-size:0.9rem;
 }
 ul.tags li a {
-    background: #fff100;
+    background: #00cdca;
     color: #333;
     padding: 3px 10px;
     border-radius: 3px;
