--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -335,7 +335,7 @@ span.post-name a,span.post-read-more a:hover {
     position: relative;
 }
 .intro .btn {
-    background: #fff100;
+    background: #00cdca;
     border: 0;
     color: #333;
     border-radius: 3px;
@@ -780,7 +780,7 @@ img {max-width:100%;height: auto;}
 
 }
 .bottompagination span.navigation a {
-	background: #fff100;
+	background: #00cdca;
     color: #333;
     padding: 5px;
     border-radius: 3px;
