--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -369,7 +369,7 @@ span.post-name a,span.post-read-more a:hover {
 	color:#999;
 	margin-top:50px;
     margin-bottom:0px;
-    background-color: #171e27;
+    background-color: #0f0f0f;
     padding: 30px 0px 30px 0;
 }
 .footersocial i {
@@ -387,7 +387,7 @@ span.post-name a,span.post-read-more a:hover {
     margin-top: 10px;
 }
 .beforefooter {
-    background: #9e4aff;
+    background: #ff4a5f;
     color: #111;
     padding: 50px 0;
     max-width: 100%;
