--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -134,7 +134,7 @@
                 <div class="col-md-4 text-right footersocial">
                     <h5>Encuéntranos en nuestras redes</h5>
                     <i class="fa fa-facebook"></i>
-                    <i href="https://twitter.com/EconThaki" class="fa fa-twitter"></i>
+                    <a href="{{site.social.twitter}}" class="fa fa-twitter"></a>
                         <i class="fa fa-google"></i>
                      <i class="fa fa-github"></i>
                 </div>
