--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -133,10 +133,10 @@
                 </div>
                 <div class="col-md-4 text-right footersocial">
                     <h5>Encuéntranos en nuestras redes</h5>
-                    <i class="fa fa-facebook"></i>
-                    <a href="{{site.social.twitter}}" class="fa fa-twitter"></a>
-                        <i class="fa fa-google"></i>
-                     <i class="fa fa-github"></i>
+                    <!-- <a class="fa fa-facebook"></a>  --> 
+                    <a href="https://twitter.com/EconThaki" class="fa fa-twitter"></a>
+                        <!--<i class="fa fa-google"></i> --> 
+                     <a href="https://github.com/EconThaki" class="fa fa-github"></a>
                 </div>
             </div>
         </div>
