--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -703,6 +703,12 @@ a.btn {color:#fff;}
     margin-top: 3rem;
     margin-bottom: 1.5rem;
 }
+.social-icon {
+    display: inline-block !important;
+    width: 20px;
+    height: 20px;
+    margin-left: 15px;
+}
 .sidebar {max-width:340px;font-size: 15px;}
 .sidebar h5 {    margin-bottom: 1rem;   text-align:center; position:relative;font-weight: 700; }
 .sidebar h5 span {
