--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,6 +122,7 @@
 
 
     <!-- Before Footer look in .beforefooter in theme.css
+        get icons here: https://icons.getbootstrap.com/icons/github/
     ================================================== --> 
     <div class="beforefooter">
         <div class="container">
