--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -335,7 +335,7 @@ span.post-name a,span.post-read-more a:hover {
     position: relative;
 }
 .intro .btn {
-    background: #00cdca;
+    background: #71d5d1;
     border: 0;
     color: #333;
     border-radius: 3px;
@@ -357,7 +357,7 @@ span.post-name a,span.post-read-more a:hover {
 }
 .wrapintro {
     background: #fff;
-    box-shadow: 0 6px 10px 0 rgba( 159 74 221);
+    box-shadow: 0 6px 10px 0 rgba( 0 205 200);
     width: 700px;
     padding: 3rem;
     max-width: 90%;
@@ -533,7 +533,7 @@ ul.tags li {
 	font-size:0.9rem;
 }
 ul.tags li a {
-    background: #00cdca;
+    background: #71d5d1;
     color: #333;
     padding: 3px 10px;
     border-radius: 3px;
@@ -786,7 +786,7 @@ img {max-width:100%;height: auto;}
 
 }
 .bottompagination span.navigation a {
-	background: #00cdca;
+	background: #71d5d1;
     color: #333;
     padding: 5px;
     border-radius: 3px;
