--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -4,7 +4,7 @@
         <div class="sidebar-section">
             <h5><span>Links Útiles</span></h5>
             <ul style="list-none;">
-             <li><a target="_blank" href="https://econthaki.github.io/Guia-PhD-EconThaki/">Guía para aplicar al PhD de Economía</a></li>                
+             <li><a target="_blank" href="https://econthaki.github.io/Guia-PhD-EconThaki/">Guía para aplicar al PhD de Economía (Perú)</a></li>                
             <li><a target="_blank" href="https://econthaki.github.io/recursos/2021/01/06/pregfreq.html">Preguntas Frecuentes</a></li>
             <li><a target="blank" href="https://econthaki.github.io/contact.html">Contacto</a></li>
             </ul>
