little changes agradecimientos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -194,10 +194,9 @@
 
                 <div class="col-sm-3">
                 <div class="footer-widget textwidget">
-                    <h5 class="title">Recuerda</h5>
-                    <p>Agradecimientos: </p>
+                    <h5 class="title">Agradecimientos</h5>
                     <p>Ilustraciones personales: Nataile Menacho (IG: natie.moon) </p>
-                    <p>Diseño y elaboración del logo: Kevin Contreras (link a https://kazeamoretti.myportfolio.com/)</p>
+                    <p>Diseño y elaboración del logo: Kevin Contreras Amoretti</p>
                 </div>
                 </div>
             </div>
