--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -195,7 +195,7 @@
                 <div class="col-sm-3">
                 <div class="footer-widget textwidget">
                     <h5 class="title">Agradecimientos</h5>
-                    <p>Ilustraciones personales: Nataile Menacho (IG: natie.moon) </p>
+                    <p>Ilustraciones personales: Natalie Menacho (IG: natie.moon) </p>
                     <p>Diseño y elaboración del logo: Kevin Contreras Amoretti</p>
                 </div>
                 </div>
