--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -7,7 +7,7 @@
              <li><a target="_blank" href="https://econthaki.github.io/Guia-PhD-EconThaki/">Guía para aplicar al PhD de Economía (Perú)</a></li>                
             <li><a target="_blank" href="https://econthaki.github.io/recursos/2021/01/06/pregfreq.html">Preguntas Frecuentes</a></li>
             <li><a target="blank" href="https://econthaki.github.io/contact.html">Contacto</a></li>
-            <li><a target="blank" href="https://econthaki.github.io/recursos/2021/01/06/pregfreq.html">Encuesta de Asistentes de Investigación en Economía en LAC</a></li>
+            <li><a target="blank" href="https://econthaki.surveycto.com/collect/eaie_2021?caseid=">Encuesta de Asistentes de Investigación en Economía en LAC</a></li>
             </ul>
         </div>
 
