--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,5 +1,9 @@
 <div class="sidebar">
-        
+         <div class="sidebar-section">
+            <h5><span>Newsletter</span></h5>
+            {% include newsletter.html %}
+        </div>
+            
             
         <div class="sidebar-section">
             <h5><span>Links Útiles</span></h5>
