--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -750,7 +750,7 @@ background-color: #fff;
 }
 .sidebar #mc_embed_signup .button {
     width: 100% !Important;
-    background: #675bff !Important;
+    background: #9e4aff !Important;
     height: auto;
     padding: 6px 20px;
     font-weight: 600;
