--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,13 +60,10 @@
                 <a class="nav-link" href="{{ site.baseurl }}/index.html">Inicio</a>
                 </li>
 
-                <li class="nav-item">                
-                    <a class="nav-link" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">¿Quiénes Somos?</a>
-                </li> 
-
                 <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">¿Por qué?</a>
+                    <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Acerca de</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
+                    <a class="nav-link" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">¿Quiénes Somos?</a>                        
                     <a class="dropdown-item" href="{{ site.baseurl }}/problematica/academia/2021/01/05/problema-identificado.html">Problema Identificado</a>
                     <a class="dropdown-item" href="{{ site.baseurl }}/encuestas/datos/2021/01/05/encuestas.html">Encuestas</a>
                     </div>
