--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -13,7 +13,7 @@
         </div>
 
          <div class="sidebar-section">
-            <h5><span>Newsletter</span></h5>
+            <h5><span>Boletín Electrónico</span></h5>
             {% include newsletter.html %}
         </div>
             
