--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -129,7 +129,7 @@
             <div class="row justify-content-center">
                 <div class="col-md-8">
                     <h3>Estamos en proceso de diseño de los programas para incrementar la diversidad en la academia en economía en Latinoamérica y Caribe.</h3>
-                    <p>Si tienes ideas que quieras compartir sobre esto, no dudes en contactarte con nosotr@s. Pronto tendremos más novedades</p>
+                    <p>Si tienes ideas que quieras compartir sobre esto, no dudes en contactarte con nosotr@s.</p>
                     <a class="btn btn-primary btn-lg" href="#">Regresar al Inicio</a>
                 </div>
                 <div class="col-md-4 text-right footersocial">
@@ -182,11 +182,13 @@
 
                 <div class="col-sm-3">
                 <div class="footer-widget">
-                <h5 class="title">Nosotros</h5>
+                <h5 class="title">EconThaki</h5>
                 <ul>
-                <li><a href="https://econthaki.github.io/acercade/2021/01/05/acercade.html">Sobre Nosotros</a></li>
-                <li><a target="_blank" href="https://econthaki.github.io/programas/2021/01/05/programas.html">Programas</a></li>
-                <li><a href="https://www.wowthemes.net/terms-and-conditions/">Preguntas Frecuentes</a></li>
+                <li><a href="https://econthaki.github.io/acercade/2021/01/05/acercade.html">¿Quiénes somos?</a></li>
+                <li><a target="https://econthaki.github.io/programas/2021/01/05/programas.html">Programas</a></li>
+                <li><a target="https://econthaki.github.io/voces/2021/01/05/voces.html">Voces</a></li>
+                <li><a target="https://econthaki.github.io/eventos/2021/01/11/eventos.html">Eventos</a></li>
+                <li><a href="https://econthaki.github.io/recursos/2021/01/06/pregfreq.html">Preguntas Frecuentes</a></li>
                 <li><a href="https://econthaki.github.io/contact.html">Contacto</a></li>
                 </ul>
                 </div>
