upd links inicio negro

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -185,9 +185,9 @@
                 <h5 class="title">EconThaki</h5>
                 <ul>
                 <li><a href="https://econthaki.github.io/acercade/2021/01/05/acercade.html">¿Quiénes somos?</a></li>
-                <li><a target="https://econthaki.github.io/programas/2021/01/05/programas.html">Programas</a></li>
-                <li><a target="https://econthaki.github.io/voces/2021/01/05/voces.html">Voces</a></li>
-                <li><a target="https://econthaki.github.io/eventos/2021/01/11/eventos.html">Eventos</a></li>
+                <li><a href="https://econthaki.github.io/programas/2021/01/05/programas.html">Programas</a></li>
+                <li><a href="https://econthaki.github.io/voces/2021/01/05/voces.html">Voces</a></li>
+                <li><a href="https://econthaki.github.io/eventos/2021/01/11/eventos.html">Eventos</a></li>
                 <li><a href="https://econthaki.github.io/recursos/2021/01/06/pregfreq.html">Preguntas Frecuentes</a></li>
                 <li><a href="https://econthaki.github.io/contact.html">Contacto</a></li>
                 </ul>
