--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,7 +128,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-md-8">
-                    <h3>Estamos en proceso de diseño de los programas para incrementar la diversidad en la academia en economía en Latinoamérica y Caribe.</h3>
+                    <h3>Trabajamos por incrementar la diversidad en la academia en economía en Latinoamérica y Caribe.</h3>
                     <p>Si tienes ideas que quieras compartir sobre esto, no dudes en contactarte con nosotr@s.</p>
                     <a class="btn btn-primary btn-lg" href="#">Regresar al Inicio</a>
                 </div>
