nueva pestania y nuevo post ecomienza2024
mas una pestania
mas un post
linking ecomienza cohorts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -73,6 +73,8 @@
                     <div class="dropdown-menu" aria-labelledby="dropdown01">                           
                     <a class="dropdown-item" href="{{ site.baseurl }}/programas/2021/01/05/programas.html">Todos los programas</a>
 
+                    <a class="dropdown-item" href="{{ site.baseurl }}/programas/2023/01/12/ecomienza23.html">Ecomienza 2023</a>
+
                     <a class="dropdown-item" href="{{ site.baseurl }}/programas/2024/04/17/ecomienza24.html">Ecomienza 2024</a>
 
                     <a class="dropdown-item" href="{{ site.baseurl }}/programas/2022/11/01/ecomentorias22-promo.html">Mentorías</a>
