--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -64,7 +64,8 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown01" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Acerca de</a>
                     <div class="dropdown-menu" aria-labelledby="dropdown01">
-                    <a class="dropdown-item" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">¿Quiénes Somos?</a>                        
+                    <a class="dropdown-item" href="{{ site.baseurl }}/acercade/2021/01/05/acercade.html">¿Quiénes Somos?</a> 
+                    <a class="dropdown-item" href="{{ site.baseurl }}/acercade/2025/11/09/nuestro-equipo.html">Nuestro Equipo</a>                      
                     <a class="dropdown-item" href="{{ site.baseurl }}/problematica/academia/2021/01/05/problema-identificado.html">Problema Identificado</a>
                     <a class="dropdown-item" href="{{ site.baseurl }}/encuestas/datos/2021/01/05/encuestas.html">Encuestas</a>
                     </div>
