--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,10 @@
 
                     <a class="dropdown-item" href="{{ site.baseurl }}/programas/2022/11/01/ecomentorias22-promo.html">Mentorías</a>
 
-
+                </li>   
+                <li class="nav-item">                
+                    <a class="nav-link" href="{{ site.baseurl }}/fellowships">Fellowships</a>
+                    
                 </li>   
                 <li class="nav-item">                
                     <a class="nav-link" href="{{ site.baseurl }}/voces/2021/01/05/voces.html">Voces</a>
